# provenact-control

./: .env.example  .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  compose.yaml  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml  verifier-source-guard.yml
docs/: api-stability.md  site-plan.md
docs/adr/: 0001-neon-postgres-storage.md  0002-nextauth-web-auth.md
examples/: hash-request.json  verify-manifest-request-v1.json  verify-manifest-request.json  verify-receipt-request-v1.json
migrations/: 0002_auth_limits.sql  0003_auth_web_attempt_limits.sql
scripts/: check-verifier-source.sh
src/: lib.rs  main.rs  main_tests.rs
web/: package-lock.json  package.json
