[package]
name = "inactu-control"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
axum = { version = "0.7", features = ["json"] }
inactu-verifier = { git = "https://github.com/opertus-systems/inactu.git", rev = "6e9f8a9", package = "inactu-verifier" }
jsonwebtoken = "9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
tower-http = { version = "0.6", features = ["trace"] }

[workspace]
members = ["."]
resolver = "2"

[dev-dependencies]
tower = "0.5"
