[package]
name = "inactu-control"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
web = [
    "dep:axum",
    "dep:jsonwebtoken",
    "dep:sqlx",
    "dep:tokio",
    "dep:time",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
]

[[bin]]
name = "inactu-control-web"
path = "src/bin/inactu-control-web.rs"
required-features = ["web"]

[dependencies]
axum = { version = "0.8", features = ["json"], optional = true }
inactu-verifier = { git = "https://github.com/opertus-systems/inactu.git", rev = "b45f54e", package = "inactu-verifier" }
jsonwebtoken = { version = "10", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "time", "migrate"], optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
time = { version = "0.3", features = ["parsing", "formatting"], optional = true }
tower-http = { version = "0.6", features = ["trace"], optional = true }

[workspace]
members = ["."]
resolver = "2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
